Improve usage of blob store cache during recovery